# nextbike-crawler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyzer.py  cache.py  compose.yml  crawler.py  flake.nix  missing_interval_finder.py  monitor.py  my_cache.py  requirements.txt  utils.py
analysis/: cache_moving_coords.py  helpers.py  metadata.py  visualize.py
database/: configure_db.sql  configure_metadata_db.sql  databaser.py  helpers.py  metadata_databaser.py
fastjsonpatch/: Cargo.toml  pyproject.toml
fastjsonpatch/src/: lib.rs
jsoncache/: pyproject.toml
jsoncache/src/jsoncache/: __init__.py  preprocessors.py
nix/: nix-python.sh
