[package]
name = "fastjsonpatch"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastjsonpatch"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "0.2"
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
